added actual games

--- a/style.css
+++ b/style.css
@@ -4,17 +4,16 @@
 }
 
 #mainframe {
-  position: fixed;
+  position: relative;
   margin: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  width: 600px;
+  width: 100%;
   height: 310px;
   background-color: #26263D;
   border-radius: 10px;
-  border: 2px solid black;
 }
 
 #ground {
@@ -31,13 +30,13 @@
 }
 
 #startingframe {
-  position: fixed;
+  position: relative;
   margin: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  width: 600px;
+  width: 100%;
   height: 310px;
   background-color: rgb(16, 16, 24);
   border-radius: 10px;
@@ -63,4 +62,34 @@
   top: 200px;
   font-size: 65px;
   z-index: 10;
+}
+
+#Flash_Games {
+  border: 0;
+  width: 100%;
+  height: 1000px;
+  margin: auto;
+}
+
+.switcher_button {
+  display: inline-block;
+  font-size: large;
+  font-family: "Bitter",serif;
+  line-height: 1;
+  color: rgb(78, 77, 77);
+  background-color: #c7c7c7;
+  text-shadow: -1px 1px #a3aab1;
+  border-radius: 10px;
+  border-color: #817a7a;
+}
+
+.switcher_button:hover {
+  cursor: pointer;
+  border-color: #8b9299;
+  color: #4e4c4c;
+  background-color: #aca0a0;
+}
+
+.switcher_button:active {
+  background-color: #817a7a;
 }
