--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   src: url('zorque.regular.ttf')  format('truetype');
 }
 
+html {
+  overflow: hidden;
+}
+
 #mainframe {
   position: relative;
   margin: auto;
@@ -69,6 +73,19 @@
   width: 100%;
   height: 1000px;
   margin: auto;
+}
+
+#My_Game {
+  position: relative;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 310px;
+  background-color: #26263D;
+  border-radius: 10px;
 }
 
 .switcher_button {
